--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,6 @@
             <groupId>org.fluentlenium</groupId>
             <artifactId>fluentlenium-assertj</artifactId>
             <version>4.5.1</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.fluentlenium</groupId>
@@ -53,6 +52,18 @@
             <artifactId>selenium-chrome-driver</artifactId>
             <version>3.5.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.21.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.21.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
